2008-05-04  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (_syx_memory_write_frame): receiver is not only an object
	(_syx_memory_read_process_stack): 

	* syx/syx-scheduler.c (syx_scheduler_add_process): run the given process just after the active process
	(syx_scheduler_init): set default timeslice to 100

	* syx/syx-memory.c (enum): rename _BOS to _BOF
	All calls have been updated.

2008-05-02  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (syx_memory_save_image): unmark the object being skipped
	(_syx_memory_write_object_with_vars): ensure the stack
	(_syx_memory_write_vars_with_fp): take care of detached frames

	* syx/syx-scheduler.c (syx_scheduler_remove_process): always check for active process

	* syx/syx-lexer.c (_syx_char_is_binary_second): temporarly removed '-'

	* syx/syx-parser.c: support <- assignment

	* syx/syx-memory.c (_syx_memory_write_frame): fix stack pointer
	(_syx_memory_write_lazy_pointer): fix on NULL process

2008-05-01  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c:
        (syx_memory_save_image): only store the stack of each process
        (_syx_memory_write_process_stack): fixed beginning and end of frames
        
        * syx/syx-memory.c:
        (_syx_memory_gc_mark): mark detached frames

        * syx/syx-memory.c:
        Fix lazy pointers.
        Fix BOS/EOS sequence for writing and reading.
        Store block closures that are not attached to any process.
        Save processes before any other object.

2008-04-27  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c (_syx_memory_write_frame): only write arguments and temporaries for detached frames
        (_syx_memory_write_process_stack): check for collected stacks, store the index of the frames
        (_syx_memory_read_process_stack): seek back by one

        * syx/syx-interp.c (syx_inter_push_block_closure): only copy arguments and temporaries

2008-04-26  Luca Bruno  <lethalman88@gmail.com>
